fix scroll on mobile

--- a/public/scss/_defaults.scss
+++ b/public/scss/_defaults.scss
@@ -36,6 +36,9 @@ body {
 }
 
 @media only screen and (max-width: 600px) {
+  html {
+    overflow: scroll;
+  }
   body {
     // max-width: 400px;
     padding: 0;
